# world_canvas_libs

./: README.md
world_canvas_client/: .cproject  CMakeLists.txt
world_canvas_client/include/world_canvas_client_cpp/: world_canvas_client.h
world_canvas_client_cpp/: .cproject  CHANGELOG.rst  CMakeLists.txt  package.xml
world_canvas_client_cpp/include/world_canvas_client_cpp/: annotation_collection.hpp  filter_criteria.hpp  unique_id.hpp
world_canvas_client_cpp/src/: annotation_collection.cpp  filter_criteria.cpp  unique_id.cpp  world_canvas_client.cpp
world_canvas_client_cpp/test/: test_annotation_collection.cpp
world_canvas_client_examples/: .cproject  CHANGELOG.rst  CMakeLists.txt  package.xml
world_canvas_client_examples/src/: test_add_update_remove_anns.py  test_annotation_collection.cpp  test_annotation_collection.py
world_canvas_client_py/: .project  CHANGELOG.rst  package.xml
world_canvas_client_py/doc/: Makefile  api.rst  conf.py  index.rst  make.bat
world_canvas_client_py/src/world_canvas_client/: __init__.py  annotation_collection.py
world_canvas_client_py/test/: test_annotation_collection.py
world_canvas_utils/: CHANGELOG.rst  package.xml
world_canvas_utils/src/world_canvas_utils/: serialization.py
